--- a/movie_project/client/public/index.html
+++ b/movie_project/client/public/index.html
@@ -23,6 +23,6 @@
     <div id="app"></div>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <!-- built files will be auto injected -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
 </html>
