--- a/movie_project/client/public/index.html
+++ b/movie_project/client/public/index.html
@@ -13,6 +13,9 @@
       div, button, nav, navbar, label, template, body, h1, h2, h3, h4, h5, h6, p, span {
         font-family: 'Yeon Sung'!important;
       }
+      nav{
+        font-weight:900;
+      }
     </style>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
