community and review create update delete

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2fe94e68d6.js" crossorigin="anonymous"></script>
     <style>
       div, button, nav, navbar, label, template, body, h1, h2, h3, h4, h5, h6, p, span {
         font-family: 'Yeon Sung'!important;
